--- a/src/components/listTasks/listTasks.module.css
+++ b/src/components/listTasks/listTasks.module.css
@@ -2,9 +2,11 @@
   top: 0px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  width: 80%;
-  height: 100%;
+  justify-content: center;
+  /* align-items: center; */
+  margin-left: 50px;
+  width: 50%;
+  height: 50%;
   /* background-color: brown; */
 }
 
