--- a/src/components/listTasks/listTasks.module.css
+++ b/src/components/listTasks/listTasks.module.css
@@ -2,11 +2,10 @@
   top: 0px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   /* align-items: center; */
   margin-left: 50px;
   width: 50%;
-  height: 50%;
   /* background-color: brown; */
 }
 
